force-app/main/default/objects/Change_Request_Related_Project__c/Change_Request_Related_Project__c.object-meta.xml
<CustomObject>
    <label>Change Request Related Project</label>
    <nameField>
        <displayFormat>CRP-{00000000}</displayFormat>
        <label>Change Request Related Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request Related Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>