force-app/main/default/objects/Change_Request_Related_Project__c/fields/PMT_Project__c.field-meta.xml
<CustomField>
    <fullName>PMT_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMT Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Related Change Requests</relationshipLabel>
    <relationshipName>Change_Request_Related_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>