force-app/main/default/objects/Change_Request_Related_Project__c/fields/Project_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Name__c</fullName>
    <formula>PMT_Project__r.Owner:User.FirstName  &amp;  &quot; &quot;  &amp; PMT_Project__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Name</label>
    <type>Text</type>
</CustomField>