force-app/main/default/objects/Change_Request_Related_Project__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Implementation</fullName>
            </value>
            <value>
                <fullName>Directly Related</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>